--- a/Classmaker/TestingSystem/templates/testingsystem/question_edit.html
+++ b/Classmaker/TestingSystem/templates/testingsystem/question_edit.html
@@ -1,13 +1,11 @@
-<!-- edit_question.html -->
-
 {% block content %}
   <h2>Edit Question</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    {{ form1.media }}
+    {{ form.as_p|safe }}
+    {{ form.media }}
     {% for form1 in option_forms %}
-      {{ form1.as_table }}
+      {{ form1.as_p|safe }}
       {{ form1.media }}
     {% endfor %}
     <button type="submit">Save</button>
