--- a/Classmaker/TestingSystem/templates/testingsystem/main.html
+++ b/Classmaker/TestingSystem/templates/testingsystem/main.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'testingsystem/css/style.css' %}">
     <title>Test Types</title>
 </head>
 <style>
