--- a/Classmaker/TestingSystem/templates/testingsystem/temp.html
+++ b/Classmaker/TestingSystem/templates/testingsystem/temp.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'testingsystem/css/style.css' %}">
 <title>Testing System - Home</title>
 </head>
 <body>
