--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -16,6 +16,9 @@
     ">
         <h2 style="color:#ffff ;">Welcome to Your Profile, {{ request.user.username }}!</h2>
 
+        <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'icon/house-solid.svg' %}" alt="Icon Description"></a>
+        <button id="blogButton"><bold>CreatePost</bold></button>
+        <script src="{% static 'js/createblog.js' %}"></script>
         <!-- Search Form -->
         <form method="GET" id="input1">
             {{form.query}}
@@ -30,7 +33,8 @@
             <li class="post-item">
                 <h4><a href="{% url 'edds' post.slug %}">{{ post.title }}</a></h4>
                 <div class="post-description">{{ post.description|slice:":20" }}...</div>
-                <img src="{{ post.picture.url }}" alt="Post Image" class="post-image">
+                <img src="{{ post.picture.url }}" alt="Post Image" class="post-image" style="width:200px;
+    height:200px;">
                 <div class="post-details">
                     <p><a href="{% url 'posts' post.id post.slug %}">Published: {{ post.publish }}</a></p>
                     <button id="btn1" type="button" class="deletebtn"><a id="color1"
