--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div class="container" >
+    <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'icon/house-solid.svg' %}" alt="Icon Description" width="50" height="50" style="position:absolute; left:930px; margin-bottom:320px;"></a>
+    <br><br>
     <h2 style="text-align:center ;">Create a New Post</h2>
     <form method="post" enctype="multipart/form-data" class="post-form">
         {% csrf_token %}
