--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -16,7 +16,7 @@
     ">
         <h2 style="color:#ffff ;">Welcome to Your Profile, {{ request.user.username }}!</h2>
 
-        <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'icon/house-solid.svg' %}" alt="Icon Description"></a>
+        <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'ikon/house-solid.svg' %}" alt="Icon Description"></a>
         <button id="blogButton"><bold>CreatePost</bold></button>
         <script src="{% static 'js/createblog.js' %}"></script>
         <!-- Search Form -->
