--- a/templates/share_post.html
+++ b/templates/share_post.html
@@ -7,7 +7,7 @@
     <title>Copy Link</title>
 </head>
 <body>
-    <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'icon/house-solid.svg' %}" alt="Icon Description" width="100" height="100" style="position:absolute; left:900px; margin-top:300px;"></a>
+    <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'ikon/house-solid.svg' %}" alt="Icon Description" width="100" height="100" style="position:absolute; left:900px; margin-top:300px;"></a>
     <div class="centered-container">
         <input type="text" id="postLink" value="{{ post_url.get_absolute_url}}">
         <button class="btn3" id="copyLinkButton">Copy Link</button>
